--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,7 @@ body {
 	
 	display: grid;
 	grid-template-columns: repeat(7, 1fr);
-	grid-template-rows: 50px;
+	grid-template-rows: 49.33px;
 	justify-content: center;  
 align-items: center; 
 	
@@ -90,6 +90,17 @@ align-items: center;
 	z-index:999;
 	position:relative;
 }
+
+.gridcontainerforhome1 {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: 90px;
+	justify-content: center;  
+	align-items: center; 
+	background: #1a75ff
+	
+}
+
 .grid-items{
 	align-self: center;
 	
@@ -114,19 +125,7 @@ align-items: center;
 	padding: 10px;
 	
 }
-header>div>a {
-	color: white;
-	font-size: 12px;
-	font-weight: bold;
-	
-}
-header>div>a:link{
-	text-decoration:none;
-}
-header>div>a:hover{
-	color: red;
-	text-decoration:none;
-}
+
 
 header>h1{
     position: relative;
@@ -282,67 +281,7 @@ align-items: center;
 }
 	
 
-/*textbox on picture
-/*Drop down menu package*/
 
-/* Style The Dropdown Button */
-.dropbtn {
-  
-  color: white;
-	font-size: 12px;
-	font-weight: bold;
-	border: none;
-	cursor: pointer;
-	padding: 18px 10%;
-	background:#1a75ff;
-	margin: auto;
-	
-}
-.dropbtn:hover
-{
-	color: #bae4f7;
-	text-decoration:none;
-}
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-  position: relative;
-  display: inline-block;
-  justify-self:center;
-  justify-items: center;align-self:center;align-items: center;
-  
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: white;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-  
-  padding: 12px 16px;
-  color: #000080;
-	font-size: 10px;
-	font-weight: none;
-	text-decoration:none;
-  display: block;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {
-	
-	font-weight: bold;
-	text-decoration:none;}
-
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
-  display: block;
-}
 
 .navbar-fixed {
     top: 0;
