--- a/css/responsivedesign.css
+++ b/css/responsivedesign.css
@@ -11,7 +11,7 @@
 .topnav a {
   float: left;
   display: block;
-  color: white;
+  
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -22,6 +22,13 @@
   background-color: #1a75ff;
   color: white;
   font-weight:bold;
+}
+
+.normicon{
+	background-color: #1a75ff;
+  color: white;
+  font-weight:bold;
+	
 }
 
 .topnav .icon {
@@ -57,28 +64,37 @@
   z-index: 3;
 }
 
-.dropdown-content a {
+.dropdown-content a{
   float: none;
-  color: black;
-  padding: 14px 16px;
+  font-family: 'Catamaran', sans-serif;
+  color: #000080;
+  padding: 14px 17px;
   text-decoration: none;
   display: block;
   text-align: left;
+  font-weight: bold;
 }
 
-.topnav a:hover,  {
+.topnav a:hover {
   
-  color: #bae4f7;
+  background-color: #005ce6;
+  
+	text-decoration:none;
+}
+.dropdown:hover {
+	background-color: #005ce6;
+  
 	text-decoration:none;
 }
 
 .dropdown-content a:hover {
-  font-weight: bold;
+  background-color:#f1f1f1;
 	text-decoration:none;
 }
 
 .dropdown:hover .dropdown-content {
   display: block;
+  
 }
 
 @media screen and (max-width: 889px) {
@@ -88,7 +104,9 @@
   .topnav a.icon {
     float: right;
     display: block;
+	color:white;
   }
+  
 }
 
 @media screen and (max-width: 889px) {
