--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,14 @@ body {
 	border: 0px;
 	
 }
+
+.blockll{
+	height: 1.5vw;
+	width:100%;
+	background: white;
+	border: 0px;
+
+}
 /*navbar*/
 .gridcontainer {
 	
